--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,40 @@
 
 	**************************************************
 	*						 *
+	*	       2.12 SERIES NEWS			 *
+	*						 *
+	**************************************************
+
+
+		CHANGES IN R VERSION 2.12.0
+
+
+NEW FEATURES
+
+    o	Reading a packages's CITATION file now defaults to ASCII
+	rather than Latin-1: a package with a non-ASCII CITATION file
+	should declare an encoding in their DESCRIPTION file and use
+	that encoding for the CITATION file.
+
+    o	difftime() now defaults to the "tzone" attribute of
+	"POSIXlt" objects rather than to the current timezone as set
+	by the default for the 'tz' argument.  (Wish of PR#14182.)
+
+
+INSTALLATION
+
+    o	A C99 compiler is now required, and more C99 language features
+	will be used in the R sources.
+
+
+BUG FIXES
+
+    o	Placeholder
+
+
+
+	**************************************************
+	*						 *
 	*	       2.11 SERIES NEWS			 *
 	*						 *
 	**************************************************
