tweak handling of UTF-8 strings containing octal/hex escapes
git-svn-id: https://svn.r-project.org/R/trunk@51400 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -391,6 +391,9 @@ NEW FEATURES
 	Tk can be started (and not just
 	capabilities("tcltk") && capabilities("X11")).
 
+    o	The parser no longer marks strings containing octal or hex
+	escapes as being in UTF-8 when entered in a UTF-8 locale.
+
 
 DEPRECATED & DEFUNCT
 
@@ -419,6 +422,9 @@ DEPRECATED & DEFUNCT
 
 	getMethods() is now deprecated, with its internal use replaced
         by findMethods() and other changes.
+
+    o 	Parsing strings containing both octal/hex and Unicode escapes
+	now gives a warning and will become an error in R 2.12.0.
 
 
 INSTALLATION
