make mixing octal/hex and Unicode escapes defunct
git-svn-id: https://svn.r-project.org/R/trunk@51402 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,12 @@ NEW FEATURES
 	by the default for the 'tz' argument.  (Wish of PR#14182.)
 
 
+DEPRECATED & DEFUNCT
+
+    o   Supplying the parser with a string containing both octal/hex and
+	Unicode escapes is now an error.
+
+
 INSTALLATION
 
     o	A C99 compiler is now required, and more C99 language features
