which(*, arr.ind) calling new arrayInd()
git-svn-id: https://svn.r-project.org/R/trunk@51421 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -405,6 +405,9 @@ NEW FEATURES
 	several problems with font selection when done by cairo rather
 	than Pango (at least on Mac OS X).
 
+    o	New arrayInd() such that which(x, arr.ind = TRUE) for an array
+	'x' is now equivalent to arrayInd(which(x), dim(x), dimnames(x)).
+
 
 DEPRECATED & DEFUNCT
 
