pretty() is now generic, new methods for Date-Time classes
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51432 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -368,6 +368,9 @@ NEW FEATURES
     o	New arrayInd() such that which(x, arr.ind = TRUE) for an array
 	'x' is now equivalent to arrayInd(which(x), dim(x), dimnames(x)).
 
+    o   pretty() is now generic, with new methods for "Date" and
+     	"POSIXt" classes (based on code contributed by Felix Andrews).
+
 
 DEPRECATED & DEFUNCT
 
