--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -117,8 +117,8 @@ later).
 * Does R run under Windows Vista?::  
 * Quotes don't come out right on the console/terminal/pager::  
 * There is no tilde on my keyboard::  
-* Can I use R on 64-bit Windows?::
-* Should I run 32 bit or 64 bit R?::
+* Can I use R on 64-bit Windows?::  
+* Should I run 32-bit or 64-bit R?::  
 @end menu
 
 
@@ -810,7 +810,7 @@ On all Windows versions you should be able to get tilde by holding the
 down the left Alt key and typing 0126 on the numeric keypad, then
 releasing the Alt key.
 
-@node Can I use R on 64-bit Windows?,  Should I run 32 bit or 64 bit R?, There is no tilde on my keyboard, Installation and Usage
+@node Can I use R on 64-bit Windows?, Should I run 32-bit or 64-bit R?, There is no tilde on my keyboard, Installation and Usage
 @section Can I use R on 64-bit Windows?
 
 The standard build of R for Windows (including the binary installer on
@@ -844,10 +844,11 @@ build, e.g.@:
 .libPaths(if(.Machine$sizeof.pointer == 8) "~/Rlibs/x64" else "~/Rlibs")
 @end example
 
-@node Should I run 32 bit or 64 bit R?, , Can I use R on 64-bit Windows?,  Installation and Usage
-@section Should I run 32 bit or 64 bit R?
+@node Should I run 32-bit or 64-bit R?,  , Can I use R on 64-bit Windows?, Installation and Usage
+@section Should I run 32-bit or 64-bit R?
 
-For most users (especially beginners) we would recommend using the 32 bit build.
+For most users (especially beginners) we would recommend using the
+32-bit build.
 
 The advantage of a native 64-bit application is that it gets a 64-bit
 address space and hence can address far more than 4GB (how much depends
@@ -858,6 +859,14 @@ those of 1GB or more).  The disadvantages are that all the pointers are
 8 rather than 4 bytes and so small objects are larger and more data has
 to be moved around, and that far less external software is available for
 64-bit versions of the OS.
+
+The toolchain (compilers, linkers, ...) use to build 64-bit R are far
+less mature than those for 32-bit R, but testing so far (all the CRAN
+packages provide an extensive test suite) suggests that they are mature
+enough for production use.  The compilers are more recent versions of
+@acronym{GCC} with better optimization and are able to take advantage of
+extra features of all x86-64 chips (more registers, SSE2/3 instructions)
+and so the code may run faster despite using larger pointers.
 
 @newchap{}
 @node Languages and Internationalization, Packages, Installation and Usage, Top
