port r51427 and corrections from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51460 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -393,12 +393,12 @@ DEPRECATED & DEFUNCT
 
     o	In the 'methods' package, the MethodsList metadata objects which
 	had been superseded by hash tables (environments) since R
-	2.8.0 are being phased out.  At the present stage stub objects
-	are generated and a warning issued if these are accessed:
-	shortly none will be generated.
+	2.8.0 are being phased out.  Objects of this class are no
+	longer assigned or used as metadata by the package.
 
 	getMethods() is now deprecated, with its internal use replaced
-        by findMethods() and other changes.
+        by findMethods() and other changes.  Creating objects from the
+        MethodsList class is also deprecated.
 
     o 	Parsing strings containing both octal/hex and Unicode escapes
 	now gives a warning and will become an error in R 2.12.0.
